# rust-nix-test

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  ci.nix  common.nix  crate-hashes.json  crate2nix.nix  default.nix  shell.nix
.vim/: coc-settings.json
proto/: registry.proto
